MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

EXTRA_DIST = \
	linux/fsapi.c \
	linux/fsapi.h \
	linux/fsapi_linux.c \
	linux/fsapi_linux.h \
	linux/fsapi_refs.h \
	linux/Kbuild \
	linux/layout.h \
	linux/Makefile \
	linux/node.c \
	linux/node.h \
	linux/rb_tree.c \
	linux/rb_tree.h \
	linux/refs_init.c \
	linux/sys.h \
	linux/sys_linux.c \
	linux/sys_linux.h \
	linux/util.h \
	linux/volume.c \
	linux/volume.h
